# fyp

./: .agentcore-response-1.json  .agentcore-response-2.json  .agentcore-test-1.json  .agentcore-test-2.json  .gitignore  AGENTS.md  ARCHITECTURE.md  AWS_RESOURCES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  README.md  agent-image-uri.txt  agent-runtime-id.txt  agentcore-runtime-arn.txt  amplify.yml  backend-image-uri.txt  dominos_pakistan_menu_import.json
agent-runtime/: Dockerfile  Dockerfile.dockerignore  README.md  env.agentcore.example.json  pyproject.toml
agent-runtime/src/agent_runtime/: __init__.py  config.py  handler.py  logging.py  memory.py  schemas.py  server.py
agent-runtime/tests/: test_handler.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: __init__.py
backend/src/agent/: __init__.py  context.py  dependencies.py  restaurant_agent.py  system_prompt.py  tools.py
backend/src/agent_client/: __init__.py  agentcore.py  client.py  factory.py  local.py  schemas.py
backend/src/api/: main.py  schemas.py
backend/src/events/: __init__.py
backend/src/infrastructure/: __init__.py  bedrock.py  config.py  dynamodb.py  logging.py
backend/tests/: fakes.py  test_agent_client.py  test_agent_request_service.py  test_api.py  test_cart_service.py  test_config.py  test_customer_session_service.py  test_dynamodb.py  test_import_menu.py  test_logging.py  test_menu_service.py  test_order_service.py  test_repositories.py  test_restaurant_agent.py  test_table_definitions.py  test_tools.py
(+96 files in other folders)
