[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pizza-ordering-agent-runtime"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "strands-agents>=1,<2",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
pythonpath = [".", "../backend"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_runtime*"]
